# Obsyd

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROJECT_STATUS.md  README.md  STATUS_REPORT.md  obsyd.db-shm  obsyd.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  seed_dummy_data.py
.github/workflows/: ci.yml  publish-client.yml
backend/: api_guard.py  config.py  database.py  ingest_main.py  main.py  migrations.py  observability.py
backend/analytics/: days_of_supply.py  disruption_score.py  eia_prediction.py  freight_proxy.py  market_report.py  supply_demand.py  tonne_miles.py
backend/auth/: dependencies.py  jwt.py  ratelimit.py  single_use.py  subscription_check.py
backend/collectors/: ais_hygiene.py  aishub.py  aisstream.py  alphavantage.py  crack_spreads.py  eia.py  eia_international.py  energy_prices.py  equities.py  finnhub.py  finnhub_news.py  firms.py  fleet_summary.py  fred.py  fred_backfill.py  freshness.py  gdelt.py  gdelt_gate.py  geofence_aggregator.py  jodi.py  noaa.py  portwatch.py  portwatch_store.py  retention.py  scheduler.py  spark_spreads.py  sts_collector.py  usgs_country_map.py  usgs_minerals.py  worldbank.py
backend/crypto/: coingecko.py
backend/econ/: fred_calendar.py
backend/edgar/: client.py
backend/gas/: __init__.py  balance.py  classification.py  demand.py  entsoe.py  entsog.py  eurostat.py  gasday.py  gie.py  raw_cache.py  units.py  validation.py  weather.py
backend/geofences/: zones.py
backend/metals/: usgs_copper.py
backend/models/: __init__.py  (+22 more)
clients/python/: README.md  obsyd.py  pyproject.toml
clients/python/examples/: 01_quarter_hour_prices.ipynb  02_capture_rates_negative_prices.ipynb  03_cross_border_flows.ipynb
clients/python/tests/: conftest.py  test_client.py  test_errors.py  test_live_smoke.py  test_retry.py
deploy/: backup-db.sh  diag-cdn-origin.sh  disk-alarm.sh  dns-01-renewal.md  docker-prune.sh  fix-caddy-domain-env.sh  fix-ufw-docker-bridge.sh  fix-valuekick-tls-internal.sh  install-caddy-integration.sh  notify.sh  obsyd-ingest.service  obsyd.nginx  obsyd.service  setup-vps.sh
docs/: API.md  launch-posts.md  signal-validation.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
scripts/: build_map_geo.py
(+374 files in other folders)
